--- a/EDA_Car_prices.ipynb
+++ b/EDA_Car_prices.ipynb
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Exploratory data analysis course by IBM"
+        "#Exploratory data analysis"
       ],
       "metadata": {
         "id": "2k0yOq5Vnloq"
